Bug 52457 - Regression: Copy sheet drops conditional formats
Summary: Regression: Copy sheet drops conditional formats
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.2 rc
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Markus Mohrhard
URL:
Whiteboard: target:3.7.0 target:3.6.1
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-24 18:45 UTC by Jim Avera
Modified: 2012-07-30 20:18 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Demo spreadsheet with conditional formatting (12.95 KB, application/x-vnd.oasis.opendocument.spreadsheet)
2012-07-24 18:45 UTC, Jim Avera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Avera 2012-07-24 18:45:49 UTC
Created attachment 64627 [details]
Demo spreadsheet with conditional formatting

Conditional formatting is dropped when a sheet is copied (that is, cells in the the copy have no conditional formatting, even though the original did).

This is a regression.  I don't know when exactly it was introduced, but the bug is not present in LibreOffice 3.4.4.

STEPS TO REPRODUCE:

Open the attached demo spreadsheet.
Click Sheet1 tab
Rightclick->Move/Copy Sheet...
Click 'Copy', then OK

RESULTS: The cell in the new sheet have no conditional formatting

EXPECTED RESULTS: Cells in the new sheet have the same conditional formatting as in the original sheet.
Comment 1 Not Assigned 2012-07-27 21:10:26 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cbd98c547af4fac641204fb56149e9d7af9ec075

copy conditional formats with sheets, fdo#52457
Comment 2 Not Assigned 2012-07-30 20:17:46 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=71e6a74ca6f77db134cbde5ebea1338cd64439e0&g=libreoffice-3-6

copy conditional formats with sheets, fdo#52457


It will be available in LibreOffice 3.6.1.