copy conditional formats with sheets, fdo#52457

Change-Id: Ic7a337e8a6b36fecbd3aad0e3366fd6f0ccc99c6